--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,7 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.2.1",
-    "socket.io": "^4.8.3",
-    "uuid": "^13.0.0"
+    "express": "^4.21.0",
+    "socket.io": "^4.8.3"
   }
 }
